examples/bad/10.emm
int main() {
  int x = 1/0;
  print(x);
  return 0;
}
